<resources>
    <string name="app_name">Aflevering01_s164646_SimonJohansen</string>

    <string name="s_t_IDandName">Simon Johansen - s164646</string>
    <string name="s_t_aflevering_1">Basics</string>
    <string name="s_t_aflevering_2">Galgeleg</string>
    <string name="s_t_aflevering_3">Fragmented Galgeleg</string>

    <string name="s_t_clickButton">Klik på en knap.</string>
    <string name="s_t_nameField">Indtast venligst dit navn.</string>
    <string name="s_b_textChange">TextChange</string>
    <string name="s_t_changedButtonName">Hej! :)</string>
    <string name="s_b_testIntent">Test Intent</string>
    <string name="s_b_webChange">WebBrowser</string>
    <string name="s_b_velkommen">Velkommen</string>
    <string name="s_t_webChange">Indtast Webpage</string>

    <string name="s_b_newActvity">Velkommen til din nye activity</string>
    <string name="s_t_activity_b">ActivityB</string>

    <string name="s_b_play_game">Spil Spil</string>
    <string name="s_b_help">Hjælp</string>
    <string name="s_b_back">Tilbage til Udvalg</string>

    <string name="s_t_help">Galgeleg Hjælp</string>
    <string name="s_b_mainMenu">Hovedmenu</string>

    <string name="s_b_guess_letter">Gæt</string>
    <string name="s_b_give_up">Jeg giver op</string>
    <string name="s_t_guessLetter_blank"></string>
    <string name="s_t_guessLetter">Gæt på et bogstav</string>
    <string name="s_t_guessLetter_wrong">Du gættede rigtigt</string>
    <string name="s_t_guessLetter_right">Du gættede forkert</string>
    <string name="s_t_guessLetter_won">Du gættede ordet!</string>
    <string name="s_t_guessLetter_lost">Han døde!</string>

    <string name="s_b_help_guessWrong">Gæt forkert</string>
    <string name="s_t_help_guessExplain">Gæt på et bogstav.
        Hvis bogstavet er i ordet, vil de blive vist i ordet.</string>
    <string name="s_t_help_galgeExplain">Hvis det ikke er i ordet, vil galgemanden blive hængt. Du kan have 5 forkerte.</string>

    <string name="title_activity_galgeleg_help">galgeleg_help</string>
    <string name="title_activity_galgeleg_main_menu">galgeleg_mainMenu</string>
    <string name="title_activity_galgeleg_fragmented">galgeleg_fragmented</string>
    <string name="title_activity_galgeleg_contact">galgeleg_contact</string>

    <string name="s_b_frag_highScore">High Score</string>
    <string name="s_b_frag_help">Hjælp</string>
    <string name="s_b_frag_contact">Kontakt</string>
    <string name="s_b_frag_words">See Words, not Implemented</string>
    <string name="s_b_submit_highscore">Indsend Highscore</string>
    <string name="s_t_frag_galgeleg_title">Fragmented Galgeleg</string>
    <string name="s_t_frag_galgeleg_youLost">Du tabte desværre!</string>
    <string name="s_t_frag_galgeleg_youWon">Du vandt! Tillykke!</string>
    <string name="s_t_frag_galgeleg_youWon2">Du reddede manden! Godt spillet!</string>
    <string name="s_t_frag_galgeleg_highScore">Galgeleg HighScore!</string>
    <string name="s_t_frag_PnT">Der er blevet implementeret et vinder og taber side.

    Der vises en liste af highscores med sekunder det tog at løse opgaven. Dog er sekunderne ikke udregnet rigtigt.
    Listen er ikke sorteret, dog er der en liste over alle der har vundet. Da jeg ikke kunne finde en måde at trække keywords ud og bruge dem til at få de sammenhængende værdier.

    Fragments er kun blevet implementeret 2 gange i starten for at lege med dem. Når jeg bruger onBackPressed i dem, lukker de ned og jeg kan ikke gå tilbage i stacken.

    Hovedmenuknapperne til tilgå's MENS spillet er igangværende. Altså fragmentet under det nye fragment er stadig brugbart.

    Jeg har brgut Nexus 4 med Android 7.0, API 24 til alle simuleringer. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>